updated links on the navbar

--- a/index.html
+++ b/index.html
@@ -252,9 +252,9 @@ slideShow();
   <div class="column" style="background-color: transparent;"> <a href="https://www.facebook.com/FerrettiHairDesign/" target="_blank"> <img src="images/facebook.png" id="facebookIcon" align="right"/></a> <a href="https://www.instagram.com/ferrettihairdesign/" target="_blank"> <img src="images/instagram.png" id="instagramIcon" align="right"/></a></div>
 </div>
 <ul id="nav">
-  <li><a href="/Ferretti-Hair-Design/">Home</a></li>
-  <li><a href="/Ferretti-Hair-Design/services.html">Services</a></li>
-  <li><a href="/Ferretti-Hair-Design/location.html">Location</a></li>
+  <li><a href="/">Home</a></li>
+  <li><a href="/services.html">Services</a></li>
+  <li><a href="/location.html">Location</a></li>
 </ul>
 <div class="row">
   <div class="columnTwo">
