--- a/services.html
+++ b/services.html
@@ -231,9 +231,9 @@ body {
   <div class="column" style="background-color: transparent;"> <a href="https://www.facebook.com/FerrettiHairDesign/" target="_blank"> <img src="images/facebook.png" id="facebookIcon" align="right"/></a> <a href="https://www.instagram.com/ferrettihairdesign/" target="_blank"> <img src="images/instagram.png" id="instagramIcon" align="right"/></a></div>
 </div>
 <ul id="nav">
-  <li><a href="/Ferretti-Hair-Design/">Home</a></li>
-  <li><a href="/Ferretti-Hair-Design/services.html">Services</a></li>
-  <li><a href="/Ferretti-Hair-Design/location.html">Location</a></li>
+  <li><a href="/">Home</a></li>
+  <li><a href="/services.html">Services</a></li>
+  <li><a href="/location.html">Location</a></li>
 </ul>
 <div style="margin:auto; margin-top: 50px; text-align: center; font-family: ElsieRegular;  width: 200px;"> <font color=white style="font-size: 46px;">Services</font> </div>
 <div style="margin:auto; margin-top: 25px; margin-bottom: 15px; padding-bottom: 25px; text-align: center; font-family: Oranienbaum; border-bottom: solid white 0.1vw; width: 75%;"> <i><font color=white style="font-size: 26px;">All services include stress relieve scalp massage and blowdry</font></i> </div>
