fixed instagram & facebook icon links bug

--- a/index - Copy.html
+++ b/index - Copy.html
@@ -40,7 +40,6 @@ body {
 	clear: both;
 }
 #phone {
-	display: block;
 	font-size: 4vw;
 	font-family: ElsieRegular;
 	color: white;
@@ -50,9 +49,7 @@ body {
 	margin-top: 25vw;
 	margin-bottom: 0px;
 	width: 95%;
-	/*min-width: 570px;*/
-	margin-left: auto;
-	margin-right: auto;
+	min-width: 570px;
 	text-align: center;
 }
 #logo {
@@ -66,14 +63,14 @@ body {
 	pointer-events: none;
 }
 #facebookIcon {
-	/*display: block;*/
+	display: block;
 	height: auto;
 	width: 6vw;
 	margin-right: 41%;
 	margin-top: 10vw;
 }
 #instagramIcon {
-	/*display: block;*/
+	display: block;
 	height: auto;
 	width: 6vw;
 	margin-right: 5%;
@@ -171,7 +168,6 @@ body {
 	display: block;
 	margin-left: 100px;
 	margin-top: 75px;
-	width: auto;
 }
 #logo {
 	width: 300px;
