--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Ferretti Hair Design - Home</title>
+<title>Ferretti Hair Design - Toronto</title>
 <link rel="icon" href="favicon.ico">
 <style>
 @font-face {
