--- a/services.html
+++ b/services.html
@@ -66,14 +66,14 @@ body {
 	pointer-events: none;
 }
 #facebookIcon {
-	display: block;
+	/*display: block;*/
 	height: auto;
 	width: 6vw;
 	margin-right: 41%;
 	margin-top: 10vw;
 }
 #instagramIcon {
-	display: block;
+	/*display: block;*/
 	height: auto;
 	width: 6vw;
 	margin-right: 5%;
@@ -164,6 +164,7 @@ body {
 	display: block;
 	margin-left: 100px;
 	margin-top: 75px;
+	width: auto;
 }
 #logo {
 	width: 300px;
