changed broken logo link to homepage

--- a/location.html
+++ b/location.html
@@ -202,7 +202,7 @@ body {
 <div id="container">
 <div class="row">
         <div class="column" style="background-color: transparent;"> <a href="tel:14165688433" style="text-decoration: none"> <font id="phone">(416)568-8433</font></a></div>
-        <div class="column" style="background-color: transparent;"> <a href="/Ferretti-Hair-Design/"> <img src="images/logo2.png" alt="mainLogo"  class="center" id="logo"/></a></div>
+        <div class="column" style="background-color: transparent;"> <a href="/"> <img src="images/logo2.png" alt="mainLogo"  class="center" id="logo"/></a></div>
         <div class="column" style="background-color: transparent;"> <a href="https://www.facebook.com/FerrettiHairDesign/" target="_blank"> <img src="images/facebook.png" id="facebookIcon" align="right"/></a> <a href="https://www.instagram.com/ferrettihairdesign/" target="_blank"> <img src="images/instagram.png" id="instagramIcon" align="right"/></a></div>
       </div>
 <ul id="nav">
