--- a/services.html
+++ b/services.html
@@ -134,7 +134,8 @@ body {
 	width: 600px;
 	vertical-align: middle;
 	text-align: left;
-	font-family: Oranienbaum;
+	/*font-family: Oranienbaum;*/
+	font-family: SansationLight;
 	font-size: 5vw;
 	line-height: 90%;
 }
@@ -205,7 +206,6 @@ body {
 	width: 600px;
 	vertical-align: middle;
 	text-align: left;
-	font-family: Oranienbaum;
 	font-size: 32px;
 	line-height: 30px;
 }
