removed fade out for picture frame and added some meta keywords

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="keywords" content="bathurst manor, hair, haircut, toronto, hair design, ferretti hair design, ferretti, hair stylist, mobile hair service">
 <title>Ferretti Hair Design - Toronto</title>
 <link rel="icon" href="favicon.ico">
 <style>
@@ -235,7 +236,8 @@ body {
     imgDuration = 4500;
 
 function slideShow() {
-    document.getElementById('slider').className += "fadeOut";
+    //document.getElementById('slider').className += "fadeOut";
+	document.getElementById('slider').className;
     setTimeout(function() {
         document.getElementById('slider').src = imgArray[curIndex];
         document.getElementById('slider').className = "";
