--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="bathurst manor, hair, haircut, toronto, hair design, ferretti hair design, ferretti, hair stylist, mobile hair service">
+<meta name="keywords" content="bathurst manor, hair, haircut, toronto, hair design, ferretti hair design, ferretti, hair stylist, mobile hair service" />
+<meta name="description" content="Ferretti Hair Design is a home based hair studio that also provides mobile hair services to the Bathurst Manor and surrounding areas." />
 <title>Ferretti Hair Design - Toronto</title>
 <link rel="icon" href="favicon.ico">
 <style>
