--- a/index.html
+++ b/index.html
@@ -232,7 +232,15 @@ body {
 	'images/two.jpg',
 	'images/three.jpg',
     'images/four.jpg',
-    'images/five.jpg'],
+    'images/five.jpg',
+	'images/six.jpg',
+	'images/seven.jpg',
+	'images/eight.jpg',
+	'images/nine.jpg',
+	'images/ten.jpg',
+	'images/eleven.jpg',
+	'images/twelve.jpg'
+	],
     curIndex = 0;
     imgDuration = 4500;
 
