hopefully fixed favicon issue

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <meta name="keywords" content="bathurst manor, hair, haircut, toronto, hair design, ferretti hair design, ferretti, hair stylist, mobile hair service" />
 <meta name="description" content="Ferretti Hair Design is a home based hair studio that also provides mobile hair services to the Bathurst Manor and surrounding areas." />
 <title>Ferretti Hair Design - Toronto</title>
-<link rel="icon" href="favicon.ico">
+<link rel="icon" href="favicon.ico" type="image/x-icon" />
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <style>
 @font-face {
 	font-family: Elsie;
