--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 }
 body {
 	background-color: #333;
+	background-color: black;
 	width: 95%;
 	min-width: 600px;
 	margin: auto;
@@ -97,9 +98,8 @@ body {
 }
 #nav {
 	border: solid #1F1F1F;
-	border-width: 0.25vw 0;
-	border-right-color: #1F1F1F;
-	border-left-color: #1F1F1F;
+	border: solid #666;
+	border-width: 7px 0;
 	background-color: #CCCCCC;
 	list-style: none;
 	list-style-type: none;
@@ -112,10 +112,6 @@ body {
 }
 #nav a {
 	display: inline-block;
-	border-top: solid #1F1F1F;
-	border-width: thin;
-	padding-top: 2vw;
-	padding-bottom: 1vw;
 	padding-left: 1.5vw;
 	padding-right: 1.5vw;
 	text-decoration: none;
@@ -134,6 +130,7 @@ body {
 #container {
 	min-width: 650px;
 	border-radius: 20px;
+	border-radius: 40px;
 	display: block;
 	margin: auto;
 	margin-top: 35px;
@@ -141,6 +138,7 @@ body {
 	background-color: #CCCCCC;
 	/*border: solid thick #88e1ff;*/
 	box-shadow: 0px 0px 50px #88e1ff;
+	box-shadow: 0px 0px 75px #88e1ff;
 }
 #textContainer {
 	display: block;
