--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ body {
 	letter-spacing: 2px;
 	color: #1F1F1F;
 	position: absolute;
-	padding-top: 2%;
+	/*padding-top: 2%;*/
 	padding-bottom: 0%;
 	margin-top: 25vw;
 	margin-bottom: 0px;
@@ -86,7 +86,7 @@ body {
 	height: auto;
 	width: 6vw;
 	margin-right: 41%;
-	padding-top: 7%;
+	/*padding-top: 7%;*/
 }
 #instagramIcon {
 	/*display: block;*/
@@ -94,7 +94,7 @@ body {
 	width: 6vw;
 	margin-right: 5%;
 	margin-bottom: 3.5vw;
-	padding-top: 7%;
+	/*padding-top: 7%;*/
 }
 #nav {
 	border: solid #1F1F1F;
@@ -134,7 +134,7 @@ body {
 	display: block;
 	margin: auto;
 	margin-top: 35px;
-	margin-bottom: 25px;
+	margin-bottom: 15px;
 	background-color: #CCCCCC;
 	/*border: solid thick #88e1ff;*/
 	box-shadow: 0px 0px 50px #88e1ff;
@@ -194,7 +194,7 @@ body {
 	text-align: left;
 	display: block;
 	margin-left: 100px;
-	margin-top: 75px;
+	margin-top: 115px;
 	width: auto;
 }
 #logo {
@@ -212,12 +212,12 @@ body {
 }
 #facebookIcon {
 	margin-right: 100px;
-	margin-top: 75px;
+	margin-top: 110px;
 	width: 50px;
 }
 #instagramIcon {
 	margin-right: 50px;
-	margin-top: 75px;
+	margin-top: 110px;
 	margin-bottom: 0px;
 	width: 50px;
 }
@@ -305,8 +305,6 @@ slideShow();
 </div>
 <p><font color=white style="font-size: 12px; font-family: ElsieRegular;">
   <center>
-    <br />
-    <br />
     <br />
     &copy 2018 Ferretti Hair Design
   </center>
