--- a/index.html
+++ b/index.html
@@ -117,7 +117,6 @@ body {
 	text-decoration: none;
 	/*background-color: #FF88B5;*/
 	background-color: #FF88B5;
-	font-family: ElsieRegular;
 	font-family: Frenchpress;
 	color: #1F1F1F;
 	font-size: 5vw;
@@ -194,11 +193,12 @@ body {
 	text-align: left;
 	display: block;
 	margin-left: 100px;
-	margin-top: 115px;
+	margin-top: 135px;
 	width: auto;
 }
 #logo {
 	width: 300px;
+	width: 350px;
 }
 .column {
 	float: left;
@@ -281,6 +281,16 @@ slideShow();
 </head>
 
 <body onload="slideShow()">
+
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.2';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
 <div id="container">
 <div class="row">
   <div class="column" style="background-color: transparent;"> <a href="tel:14165688433" style="text-decoration: none"> <font id="phone">(416)568-8433</font></a></div>
@@ -303,6 +313,7 @@ slideShow();
     <div id="textContainer" style="margin-top:1vw">Please call ahead to book an appointment!</font></div>
   </div>
 </div>
+<div class="fb-page" data-href="https://www.facebook.com/officialFerrettiHairDesign/" data-tabs="timeline" data-width="500" data-height="250" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/officialFerrettiHairDesign/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/officialFerrettiHairDesign/">Ferretti Hair Design</a></blockquote></div>
 <p><font color=white style="font-size: 12px; font-family: ElsieRegular;">
   <center>
     <br />
