--- a/services.html
+++ b/services.html
@@ -21,11 +21,21 @@
 	font-family: SansationRegular;
 	src: url('fonts/Oranienbaum.ttf');
 }
+@font-face {
+	font-family: QuicksandBook;
+	src: url('fonts/Quicksand_Book.otf');
+}
+@font-face {
+	font-family: Frenchpress;
+	src: url('fonts/ModernSans.otf');
+}
 body {
-	background-color: #666;
+	background-color: #333;
+	background-color: black;
 	width: 95%;
-	/*min-width: 800px;*/
+	min-width: 600px;
 	margin: auto;
+	font-size: 20px;
 }
 * {
 	box-sizing: border-box;
@@ -33,32 +43,35 @@ body {
 .column {
 }
 .columnTwo {
-	float: left;
-	width: 50%;
-	padding: 1px;
 }
 .row:after {
 	content: "";
 	display: table;
 	clear: both;
+	font-size: 20px;
 }
 #phone {
+	display: block;
 	font-size: 4vw;
 	font-family: ElsieRegular;
-	color: white;
+	font-family: Frenchpress;
+	letter-spacing: 2px;
+	color: #1F1F1F;
 	position: absolute;
-	padding-top: 0%;
+	/*padding-top: 2%;*/
 	padding-bottom: 0%;
 	margin-top: 25vw;
 	margin-bottom: 0px;
 	width: 95%;
-	min-width: 570px;
+	/*min-width: 570px;*/
+	margin-left: auto;
+	margin-right: auto;
 	text-align: center;
 }
 #logo {
 	display: block;
-	padding-top: 0%;
-	padding-bottom: 0%;
+	padding-top: 5%;
+	padding-bottom: 10%;
 	margin-left: auto;
 	margin-right: auto;
 	width: 50vw;
@@ -70,25 +83,24 @@ body {
 	height: auto;
 	width: 6vw;
 	margin-right: 41%;
-	margin-top: 10vw;
+	/*padding-top: 7%;*/
 }
 #instagramIcon {
 	/*display: block;*/
 	height: auto;
 	width: 6vw;
 	margin-right: 5%;
-	margin-top: 10vw;
 	margin-bottom: 3.5vw;
+	/*padding-top: 7%;*/
 }
 #nav {
-	border: solid #ccc;
-	border-width: 0.25vw 0;
-	border-right-color: black;
-	border-left-color: black;
-	background-color: black;
+	border: solid #1F1F1F;
+	border: solid #666;
+	border-width: 7px 0;
+	background-color: #CCCCCC;
 	list-style: none;
 	list-style-type: none;
-	margin: 10;
+	margin: 0;
 	padding: 0;
 	text-align: center;
 }
@@ -97,31 +109,38 @@ body {
 }
 #nav a {
 	display: inline-block;
-	padding-top: 1vw;
-	padding-bottom: 1vw;
 	padding-left: 1.5vw;
 	padding-right: 1.5vw;
 	text-decoration: none;
-	background-color: #333;
-	font-family: Elsie;
-	color: white;
+	/*background-color: #FF88B5;*/
+	background-color: #FF88B5;
+	font-family: ElsieRegular;
+	font-family: Frenchpress;
+	color: #1F1F1F;
 	font-size: 5vw;
 	letter-spacing: 0.25em;
 }
 #nav a:hover, a:active {
-	background-color: #F0F;
+	background-color: #1F1F1F;
+	color: white;
 }
 #container {
+	min-width: 650px;
 	border-radius: 20px;
+	border-radius: 40px;
 	display: block;
 	margin: auto;
-	margin-top: 25px;
-	margin-bottom: 25px;
-	background-color: black;
+	margin-top: 35px;
+	margin-bottom: 15px;
+	background-color: #CCCCCC;
+	/*border: solid thick #88e1ff;*/
+	box-shadow: 0px 0px 50px #88e1ff;
+	box-shadow: 0px 0px 75px #88e1ff;
 }
 .horizontalRule {
 	width: 90%;
-	border-width: 0.2vw;	
+	border-width: 0.2vw;
+	color: #1F1F1F;	
 }
 .textContainer {
 	display: block;
@@ -135,7 +154,7 @@ body {
 	vertical-align: middle;
 	text-align: left;
 	/*font-family: Oranienbaum;*/
-	font-family: SansationLight;
+	font-family: Frenchpress;
 	font-size: 5vw;
 	line-height: 90%;
 }
@@ -150,36 +169,49 @@ body {
 	width: 100px;
 	height: auto;
 }
-@media only screen and (min-width: 1000px) {
+
+ /*@media only screen and (min-width: 1000px) {*/
+ @media only screen and (min-width: 1px) {
 body {
 	width: 1250px;
-}
-.column {
-	float: left;
-	width: 33.33%;
-	padding: 1px;
 }
 #phone {
 	font-size: 32px;
 	text-align: left;
 	display: block;
 	margin-left: 100px;
-	margin-top: 75px;
+	margin-top: 135px;
 	width: auto;
 }
 #logo {
 	width: 300px;
+	width: 350px;
+}
+.column {
+	float: left;
+	width: 33.33%;
+	padding: 1px;
+}
+.columnTwo {
+	float: left;
+	width: 50%;
+	padding: 1px;
 }
 #facebookIcon {
 	margin-right: 100px;
-	margin-top: 75px;
+	margin-top: 110px;
 	width: 50px;
 }
 #instagramIcon {
 	margin-right: 50px;
-	margin-top: 75px;
+	margin-top: 110px;
 	margin-bottom: 0px;
 	width: 50px;
+}
+#imageContainer {
+	width: 500px;
+	height: 600px;
+	margin-left: 50px;
 }
 #nav a {
 	padding-top: 10px;
@@ -220,25 +252,30 @@ body {
 	width: 100px;
 	height: auto;
 }
-}
+
 </style>
+
+
 </head>
 
-<body onload="slideShow()">
+
+
 <div id="container">
 <div class="row">
   <div class="column" style="background-color: transparent;"> <a href="tel:14165688433" style="text-decoration: none"> <font id="phone">(416)568-8433</font></a></div>
-  <div class="column" style="background-color: transparent;"> <a href="/"> <img src="images/logo2.png" alt="mainLogo"  class="center" id="logo"/></a></div>
+  <div class="column" style="background-color: transparent;"> <a href="/"> <img src="images/logo.png" alt="mainLogo"  class="center" id="logo"/></a></div>
   <div class="column" style="background-color: transparent;"> <a href="https://www.facebook.com/officialFerrettiHairDesign/" target="_blank"> <img src="images/facebook.png" id="facebookIcon" align="right"/></a> <a href="https://www.instagram.com/ferrettihairdesignbymirella/" target="_blank"> <img src="images/instagram.png" id="instagramIcon" align="right"/></a></div>
 </div>
 <ul id="nav">
+  <b>
   <li><a href="/">Home</a></li>
   <li><a href="/services.html">Services</a></li>
   <li><a href="/location.html">Location</a></li>
+  </b>
 </ul>
-<div style="margin:auto; margin-top: 50px; text-align: center; font-family: ElsieRegular;  width: 200px;"> <font color=white style="font-size: 46px;">Services</font> </div>
-<div style="margin:auto; margin-top: 25px; margin-bottom: 15px; padding-bottom: 25px; text-align: center; font-family: Oranienbaum; border-bottom: solid white 0.1vw; width: 75%;"> <i><font color=white style="font-size: 26px;">All services include stress relieve scalp massage and blowdry</font></i> </div>
-<font color=white>
+<div style="margin:auto; margin-top: 50px; text-align: center; font-family: Frenchpress;  width: 200px;"> <font color=#1F1F1F style="font-size: 46px;">Services</font> </div>
+<div style="margin:auto; margin-top: 25px; margin-bottom: 15px; padding-bottom: 25px; text-align: center; font-family: Oranienbaum; border-bottom: solid #1F1F1F 0.1vw; width: 75%;"> <i><font color=#1F1F1F style="font-size: 26px;">All services include stress relieve scalp massage and blowdry</font></i> </div>
+<font color=#1F1F1F>
 <div class="row">
   <div class="columnTwo">
     <div class="textContainer"><b>Women's Haircut</b><br />
